# st_project

./: .gitignore  README.md  application.py  group.csv  group_1.csv  group_3.csv  group_4.csv  pyproject.toml
src/: application.py
src/st_project/: models.py  services.py
tests/: test_cases.py  test_models.py  test_services.py
