[project]
name = "st-project"
version = "0.1.0"
description = "Calculate travel expenses across Projects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pytest>=8.3.3", "ruff>=0.6.9"]

[tool.ruff]
line-length = 100
